@@ -2,114 +2,122 @@ package com.cjkim.kimjuim.mapper;
 
 import com.cjkim.kimjuim.restaurant.dto.BizHourDto;
 import com.cjkim.kimjuim.restaurant.dto.MenuDto;
-import com.cjkim.kimjuim.restaurant.dto.RestaurantImageDto;
 import com.cjkim.kimjuim.restaurant.dto.RestaurantNearbyResponse;
 import com.cjkim.kimjuim.restaurant.utils.BizHourUtils;
 import com.cjkim.kimjuim.restaurant.utils.CategoryUtils;
 import com.cjkim.kimjuim.restaurant.utils.MenuUtils;
 import com.cjkim.kimjuim.restaurant.utils.PriceUtils;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
-import java.util.ArrayList;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
+@Slf4j
 @Component
+@RequiredArgsConstructor
 public class RestaurantQueryMapper {
 
-    public List<RestaurantNearbyResponse> mapToRestaurantDtos(
+    private final ObjectMapper objectMapper;
+
+    public List<RestaurantNearbyResponse> mapToRestaurants(
             List<Map<String, Object>> queryResults,
             LocalDateTime now
     ) {
-        Map<Long, TempRestaurantData> restaurantDataMap = new LinkedHashMap<>();
-
-        // 1단계: 데이터 수집
-        for (Map<String, Object> row : queryResults) {
-            Long restaurantId = (Long) row.get("id");
-
-            TempRestaurantData tempData = restaurantDataMap.computeIfAbsent(
-                    restaurantId,
-                    id -> {
-                        TempRestaurantData data = new TempRestaurantData();
-                        data.response = RestaurantNearbyResponse.from(row);
-                        data.menus = new ArrayList<>();
-                        data.images = new ArrayList<>();
-                        data.bizHours = new ArrayList<>();
-                        return data;
-                    }
-            );
-
-            // Menu 정보 추가
-            if (row.get("menu_id") != null) {
-                MenuDto menu = MenuDto.from(row);
-                if (tempData.menus.stream().noneMatch(m -> m.id().equals(menu.id()))) {
-                    tempData.menus.add(menu);
-                }
-            }
-
-            // RestaurantImage 정보 추가
-            if (row.get("image_id") != null) {
-                RestaurantImageDto image = RestaurantImageDto.from(row);
-                if (tempData.images.stream().noneMatch(img -> img.id().equals(image.id()))) {
-                    tempData.images.add(image);
-                }
-            }
-
-            // BizHour 정보 추가
-            if (row.get("biz_hour_id") != null) {
-                BizHourDto bizHour = BizHourDto.from(row);
-                if (tempData.bizHours.stream().noneMatch(bh -> bh.id().equals(bizHour.id()))) {
-                    tempData.bizHours.add(bizHour);
-                }
-            }
-        }
-
-        // 2단계: 기존 Utils 활용하여 최종 응답 생성
-        return restaurantDataMap.values().stream()
-                .map(tempData -> createFinalResponse(tempData, now))
-                .collect(Collectors.toList());
+        return queryResults.stream()
+                .map(row -> mapToRestaurant(row, now))
+                .toList();
     }
 
-    private RestaurantNearbyResponse createFinalResponse(
-            TempRestaurantData tempData,
+    private RestaurantNearbyResponse mapToRestaurant(
+            Map<String, Object> row,
             LocalDateTime now
     ) {
-        RestaurantNearbyResponse original = tempData.response;
+        try {
+            // 기본 정보
+            Long id = ((Number) row.get("id")).longValue();
+            String rid = (String) row.get("rid");
+            String name = (String) row.get("name");
+            Double x = ((Number) row.get("x")).doubleValue();
+            Double y = ((Number) row.get("y")).doubleValue();
+            String rawCategory = (String) row.get("category");
+            String address = (String) row.get("address");
 
-        // 기존 Utils 함수 재사용!
-        String categoryFormatted = CategoryUtils.getCategory(original.category());
-        String recommendedPrice = PriceUtils.getRecommendedPriceFromDto(tempData.menus);
-        String menusFormatted = MenuUtils.getMenusFromDto(tempData.menus);
-        String todayBizHour = BizHourUtils.getTodayBizHourFromDto(tempData.bizHours, now);
+            // JSON 파싱
+            String menusJson = (String) row.get("menus");
+            String imagesJson = (String) row.get("images");
+            String bizHoursJson = (String) row.get("biz_hours");
 
-        List<String> imageUrls = tempData.images.stream()
-                .map(RestaurantImageDto::url)
-                .collect(Collectors.toList());
+            List<MenuDto> menus = parseMenus(menusJson);
+            List<String> images = parseImages(imagesJson);
+            List<BizHourDto> bizHours = parseBizHours(bizHoursJson);
 
-        return new RestaurantNearbyResponse(
-                original.id(),
-                original.rid(),
-                original.name(),
-                original.x(),
-                original.y(),
-                categoryFormatted,
-                original.address(),
-                original.roadAddress(),
-                recommendedPrice,
-                imageUrls,
-                menusFormatted,
-                todayBizHour
-        );
+            // Utils 적용
+            String category = CategoryUtils.getCategory(rawCategory);
+            String recommendedPrice = PriceUtils.getRecommendedPriceFromDto(menus);
+            String menuText = MenuUtils.getRepresentativeMenus(menus);
+            String bizHour = BizHourUtils.getTodayBizHourFromDto(bizHours, now);
+
+            return new RestaurantNearbyResponse(
+                    id, rid, name, x, y, category, address,
+                    recommendedPrice, images, menuText, bizHour
+            );
+
+        } catch (Exception e) {
+            log.error("Failed to map restaurant data: {}", row, e);
+            throw new RuntimeException("Restaurant mapping failed", e);
+        }
     }
 
-    // 임시 데이터 클래스
-    private static class TempRestaurantData {
-        RestaurantNearbyResponse response;
-        List<MenuDto> menus;
-        List<RestaurantImageDto> images;
-        List<BizHourDto> bizHours;
+    private List<MenuDto> parseMenus(String json) {
+        try {
+            if (json == null || json.equals("[]")) {
+                return List.of();
+            }
+            return objectMapper.readValue(json, new TypeReference<>() {});
+        } catch (Exception e) {
+            log.error("Failed to parse menus JSON: {}", json, e);
+            return List.of();
+        }
+    }
+
+    private List<String> parseImages(String json) {
+        try {
+            if (json == null || json.equals("[]")) {
+                return List.of();
+            }
+
+            List<Map<String, Object>> imageList = objectMapper.readValue(
+                    json,
+                    new TypeReference<>() {}
+            );
+
+            return imageList.stream()
+                    .map(img -> (String) img.get("url"))
+                    .filter(Objects::nonNull)
+                    .limit(10)
+                    .toList();
+
+        } catch (Exception e) {
+            log.error("Failed to parse images JSON: {}", json, e);
+            return List.of();
+        }
+    }
+
+    private List<BizHourDto> parseBizHours(String json) {
+        try {
+            if (json == null || json.equals("[]")) {
+                return List.of();
+            }
+            return objectMapper.readValue(json, new TypeReference<>() {});
+        } catch (Exception e) {
+            log.error("Failed to parse biz_hours JSON: {}", json, e);
+            return List.of();
+        }
     }
 }
